--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="col-sm-4 order-sm-last col-md-3">
             <h2>Discover & Review</h2>
         </div>
+        <div></div>
         <div class="col">
             <h3>Our Campsites</h3>
             <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
